--- a/jameblog/_sass/realjame/_base.scss
+++ b/jameblog/_sass/realjame/_base.scss
@@ -16,7 +16,7 @@ body {
 	margin: auto;
 	min-height: 100vh;
 
-	@include media-query($on-palm) {
+	@include media-query($small-screen) {
 		width: 90%;
 	}
 }
@@ -184,7 +184,7 @@ pre {
 	padding-left: $spacing-unit;
 	@extend %clearfix;
 
-	@include media-query($on-laptop) {
+	@include media-query($small-screen) {
 		max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
 		max-width: calc(#{$content-width} - (#{$spacing-unit}));
 		padding-right: $spacing-unit / 2;
